# emergent-physics-comm

./: .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  EXPERIMENTS.md  LICENSE  README.md  _block3_infra.py  _critical_fixes.py  _crossmodal_experiment.py  _experiments_119_127.py  _failure_analysis.py  _final_overnight.py  _fix_exp3_exp4.py  _killer_experiment.py  _moonshot16_9.py  _moonshot17_18.py  _moonshot19_21.py  _neurips_battery.py  _neurips_quickwins.py  _overnight_moonshots.py  _overnight_scaling.py  _phase103_106.py  _phase107_109.py  _phase110_115.py  _phase117_118.py  _phase119_128.py  _phase44_stages.py  _phase45_clevrer.py  _phase45b_temporal.py  _phase45c_contrastive.py  _phase45d_contrastive.py  _phase46_slotcontrast.py  _phase47_contrastive_1000v.py  _phase47b_contrastive_1000v.py  _phase48_clevrer_communication.py  _phase48b_clevrer_dynamics.py  _phase48c_clevrer_dynamics_1000v.py  _phase48d_centroid_dynamics.py  _phase48e_singleobj_dynamics.py  (+101 more)
demo/: api_docs.html  docker-compose.yml  full_demo.py  grafana_dashboard.json  prometheus.yml  realtime_demo.html  simulator.py
emergent-physics-comm/: LICENSE  README.md  requirements.txt
protocol-spec/: ARCHITECTURE.md  CERTIFICATION.md  COMPARISON.md  COMPATIBILITY.md  COMPLIANCE_REPORT.md  CONTRIBUTING.md  EVIDENCE.md  EXPANSION.md  GRAMMAR.md  LICENSE  MEMO.md  MIGRATION.md  ONBOARDING.md  PRIVACY.md  QUICKSTART.md  README.md  RELEASE_NOTES_v0.1.md  ROADMAP.md  SECURITY.md  SPEC.md  TESTPYPI.md  dashboard-data.json  dashboard.html  deck-data.md  openapi.yaml
results/: load_test_results.json  (+154 more)
(+145 files in other folders)
